# lisp.rs

./: Cargo.toml  LICENSE  Makefile  README.md
benches/: bench.lisp  fact.rs  fib.rs
examples/: memory_test.rs
src/: ast.rs  compile.rs  engine.rs  error.rs  eval.rs  global_env.rs  lib.rs  local_env.rs  main.rs  name.rs  parser.rs  predef.lisp  predef.rs  repl.lisp  static_env.rs  value.rs
src/eval/: compile.rs  error.rs  global_env.rs  local_env.rs
test-lisp/: arithmetic.lisp  assert-error.lisp  letrec.lisp  list-ops.lisp  pattern-match.lisp  quasiquote.lisp  variable-lookup.lisp
tests/: e2e.rs
tests/e2e/: gensym.lisp  letrec.lisp  macro_expand.lisp  macros.lisp  module.lisp  module_hierarchy.lisp  module_import.lisp  module_macro.lisp  pattern_match.lisp  syntax.lisp  variable_lookup.lisp
