[package]
name = "lisprs"
version = "0.1.0"
authors = ["todesking <discommunicative@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = {version = "7.1", optional = true}

[dev-dependencies]
criterion = "0.3"

[features]
default = ["repl"]
repl = ["rustyline"]

[[bench]]
name = "fib"
harness = false
